colors, typo, mobiil

--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-<ha-te-em-ll lang="en">
+<html lang="en">
+
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400, 700 &display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>KIG individuaalne eksam</title>
-    <link rel="stylesheet" href="omg-mistoimub.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <section class="hero123456">
+
         <div class="intro">
-            <img class="logo" src="" alt="Saaremaa DiskGolf logo">
+            <img class="logo" src="img/logo ok.svg" alt="Saaremaa DiskGolf logo">
             <nav class="lang"><a href="#" class="lang__btn">EN</a></nav>
         </div>
         <div class="course">
@@ -29,11 +34,13 @@
                 <div class="course__data-item">Mängijaid: <span class="course__data-item__number">12</span></div>
             </div>
 
-            <a class="btn-primary" href="#">AAAHHHH!!!!!</a>
-            
+
+            <a class="btn-primary" href="#">Alusta mängu</a>
+
             <a class="btn-secondary" href="#">Teised Saaremaa rajad</a>
 
         </div>
     </section>
 </body>
-</ha-te-em-ll>
+
+</html>
