--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <section class="hero123456">
+    <section class="hero">
 
         <div class="intro">
             <img class="logo" src="img/logo ok.svg" alt="Saaremaa DiskGolf logo">
@@ -31,7 +31,7 @@
             <div class="course__data">
                 <div class="course__data-item">Korve: <span class="course__data-item__number">9</span></div>
                 <div class="course__data-item">Par: <span class="course__data-item__number">27</span></div>
-                <div class="course__data-item">Mängijaid: <span class="course__data-item__number">12</span></div>
+                <div class="course__data-item">Mängijaid: <span class="course__data-item__number">9</span></div>
             </div>
 
 
